Fix messed up title fonts on ie

--- a/public/assets/css/ie.styl
+++ b/public/assets/css/ie.styl
@@ -1,1 +1,9 @@
 /* IE specific styles */
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+
+  h1 {
+    font-weight normal !important;
+  }
+  
+}
